# OpenGL-Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
ressources/Models/box/: license.txt  scene.gltf
ressources/Shaders/: simple.frag  simple.vert  texture.frag
src/common/Camera/: camera.hpp
src/common/InputControl/: IKeyboardListener.hpp  IMouseClickListener.hpp  IMousePosListener.hpp  IScrollListener.hpp  InputController.cpp  InputController.hpp
src/common/Objects/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/common/Primitives/: Texture.hpp  Vertex.hpp
src/common/Shaders/: shader.hpp
src/common/Textures/: TextureLoader.cpp  TextureLoader.hpp  TextureManager.cpp  TextureManager.hpp
